<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_settings"
        android:icon="@drawable/ic_settings"
        android:title=""
        android:contentDescription="@string/settings_app_desc"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/bottom_gallery"
        android:icon="@drawable/ic_gallery"
        android:title=""
        android:contentDescription="@string/galley_desc"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/bottom_device"
        android:icon="@drawable/ic_statistics"
        android:title=""
        android:contentDescription="@string/device_desc"
        app:showAsAction="ifRoom"
        />

</menu>