<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:clickable="true"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_log_tag"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"

        android:text="@string/user_log_def_tag"
        android:textStyle="bold"
        android:layout_toEndOf="@id/user_log_location"/>

    <TextView
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"

        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"

        android:id="@+id/user_log_level"
        android:layout_alignParentStart="true"
        android:layout_below="@id/user_log_location"
        android:text="@string/user_log_def_level">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_log_message"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"

        android:textSize="12sp"

        android:text="@string/user_log_def_message"
        android:layout_below="@id/user_log_location"
        android:layout_toEndOf="@id/user_log_level"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:id="@+id/user_log_location"
        android:textStyle="italic"
        android:text="@string/user_log_def_location"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_log_time"
        android:text="@string/user_log_def_time"
        android:textAlignment="viewEnd"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/user_log_tag">

    </TextView>
</RelativeLayout>