<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.Material3.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:menu="@menu/top_menu"
                app:navigationIcon="@drawable/ic_exit"
                app:subtitle="@string/subtitle_init_value"
                app:subtitleCentered="true"
                app:title="@string/app_name"
                app:titleCentered="true" />

        </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/home_text" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>